--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,1 @@
-mettre dans les .zip le py file d'installation du test (le créer)
+mettre dans les .zip le py file d'installation du test (le créer).
